tests/vendor/invalid/semantics/goto_variable.c
//tags: simple, goto
int main() {
    int a;
    goto a;
    return 0;
}